fix spacing

--- a/kifi-backend/modules/shoebox/angular/src/profile/profile.styl
+++ b/kifi-backend/modules/shoebox/angular/src/profile/profile.styl
@@ -828,7 +828,7 @@ input.profile-email-address-add-input
     margin-left: 10px
 
 .profile-section-subheading.kf-profile-export-subheading
-    margin-bottom: 0px
+    margin-bottom: 10px
 
 .profile-section-subheading.kf-profile-export-info
   color: #56b263
